# django-geo-spaas-processing

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile_cli  Dockerfile_multi_folder  Dockerfile_worker  MANIFEST.in  README.md  multi_folder_download.py  pyproject.toml  runtests.py  setup.py
.github/workflows/: ci.yml  tests_and_build.yml
geospaas_processing/: __init__.py  apps.py  celeryconfig.py  converters.py  copiers.py  downloaders.py  models.py  ops.py  provider_settings.yml  settings.py  tasks.py  utils.py
geospaas_processing/auxiliary/: LUT_Rayleigh_OLCI.txt
geospaas_processing/cli/: README.md  copy.py  delete_and_copy.py  download.py  util.py
geospaas_processing/converters/: __init__.py  base.py
geospaas_processing/migrations/: 0001_squashed_0003_remove_processingresult_ttl.py  0002_alter_processingresult_path.py  0003_processingresult_ttl.py
geospaas_processing/parameters/: cmems_001_024_hourly_mean_surface  cmems_001_024_hourly_smoc  cmems_008_046  cmems_013_030_drifter_0m  cmems_013_030_drifter_15m  cmems_013_048_drifter_0m  cmems_013_048_drifter_15m  cmems_013_048_radar_total  cmems_015_003_0m  cmems_015_003_15m  esa_cci_sst  ghrsst_l2p_modis_a_day  ghrsst_l2p_modis_a_jpl_day  ghrsst_l2p_modis_a_jpl_night  ghrsst_l2p_modis_a_night  ghrsst_l2p_viirs_jpl  ghrsst_l2p_viirs_jpl_sst  ghrsst_l2p_viirs_navo  ghrsst_l2p_viirs_navo_sst  (+18 more)
multi_folder_config/: provider_settings.yml
scripts/: docker_push.sh
tests/: test_apps.py  test_cli.py  test_converters.py  test_copiers.py  test_downloaders.py  test_ops.py  test_tasks.py  test_utils.py
(+103 files in other folders)
