[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "geospaas_processing"
description = "Processing tools for GeoSPaaS"
readme = "README.md"
authors = [
    {name = "Adrien Perrin", email = "adrien.perrin@nersc.no"},
    {name = "Arash Azamifard"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.7"
dependencies = [
    'django-geo-spaas',
    'django',
    'freezegun',
    'nco',
    'oauthlib',
    'paramiko',
    'pyotp',
    'PyYAML',
    'requests_oauthlib',
    'requests',
    'scp',
]
urls = {Repository = "https://github.com/nansencenter/django-geo-spaas-processing"}
dynamic = ["version"]

[project.optional-dependencies]
graylog = ["graypy"]
parallel_download = ['redis']
worker = ['celery==4.4.*', 'django-celery-results==1.2.*']
idf = ['idf_converter']

[tool.setuptools]
packages = ["geospaas_processing"]
